@@ -8,3 +8,4 @@ copy "religionMap.txt" "DWToV2\religionMap.txt"
 copy "changeLog.txt" "DWToV2\changeLog.txt"
 copy "blocked_nations.txt" "DWToV2\blocked_nations.txt"
 copy "unions.txt" "DWToV2\unions.txt"
+copy "governmentMapping.txt" "DWToV2\governmentMapping.txt"
