@@ -8,3 +8,4 @@ copy "religionMap.txt" "HttTToV2\religionMap.txt"
 copy "changeLog.txt" "HttTToV2\changeLog.txt"
 copy "blocked_nations.txt" "HttTToV2\blocked_nations.txt"
 copy "unions.txt" "HttTToV2\unions.txt"
+copy "governmentMapping.txt" "HttTToV2\governmentMapping.txt"
